{
  "@@locale": "it",
  "settings": "Settings",
  "language": "Language",
  "systemDefault": "System Default",
  "notes": "Notes",
  "todos": "To-Dos",
  "expenses": "Expenses",
  "journal": "Journal",
  "calendar": "Calendar",
  "clipboard": "Clipboard",
  "canvas": "Canvas",
  "save": "Save",
...
  "copyContent": "Copy Content",
  "titleOptional": "Title (Optional)",
  "exportAsPdf": "Export as PDF",
  "taskDueNow": "Task Due Now",
  "moveTaskToBinTitle": "Move Task to Recycle Bin?",
  "restoreTaskLater": "You can restore this task later from settings.",
  "newTask": "New Task",
  "editTask": "Edit Task",
  "undo": "Undo",
  "redo": "Redo",
  "category": "Category",
  "categoryHint": "e.g. Work, Gym",
  "whatNeedsToBeDone": "What needs to be done?",
...
