...
                              ? colorScheme.primary
                              : colorScheme.onSurface.withValues(alpha: 0.54),
                        ),
                        const SizedBox(width: 16),
                        Expanded(
                          child: Text(
                            _isDone ? 'Completed' : 'Mark as Completed',
                            style: TextStyle(
                              color: _isDone
                                  ? colorScheme.primary
                                  : colorScheme.onSurface.withValues(
                                      alpha: 0.7,
                                    ),
...
          ),
        ),
        floatingActionButton: FloatingActionButton.extended(
          onPressed: _saveTodo,
          backgroundColor: colorScheme.primary,
          label: Text(
            'Save Task',
            style: TextStyle(
              color: colorScheme.onPrimary,
              fontWeight: FontWeight.bold,
            ),
          ),
          icon: Icon(CupertinoIcons.check_mark, color: colorScheme.onPrimary),
...
